@@ -40,8 +40,8 @@ if (is.numeric(by))
     stop('Cannot group single spectra (use plot instead)')
 
 #take aggregated data
-cntplotspecs <- aggspec(rspecdata, by = by, FUN = FUN.center)
-errplotspecs <- aggspec(rspecdata, by = by, FUN = FUN.error)
+cntplotspecs <- aggspec(rspecdata, by = by, FUN = FUN.center, ...)
+errplotspecs <- aggspec(rspecdata, by = by, FUN = FUN.error, ...)
 
 # make wavelength vector
 wl_index <- which(names(rspecdata)=='wl')
@@ -121,7 +121,8 @@ arg$x <- wl
 arg$y <- cntplotspecs[, 1]
 arg$type <- 'n'
 
-  do.call(plot, arg)
+arg0 <- arg[names(arg) %in% c(names(formals(plot.default)), names(par()))]
+do.call(plot, arg0)
 
 arg$type <- NULL
 arg$x <- polygon_wl
@@ -129,13 +130,15 @@ arg$y <- polygon_data[, 1]
 arg$col <- shadecol[1]  
 arg$border <- NA
 
-do.call(polygon, arg)
+arg0 <- arg[names(arg)%in%names(formals(polygon))]
+do.call(polygon, arg0)
   
   if (ncol(cntplotspecs)>1) {
     for (i in 2:ncol(cntplotspecs)){
       arg$col <- shadecol[i]
       arg$y <- polygon_data[, i]
-      do.call(polygon, arg)
+      arg0 <- arg[names(arg) %in% c(names(formals(polygon)), names(par()))]
+      do.call(polygon, arg0)
     }
   }
   
@@ -147,14 +150,16 @@ do.call(polygon, arg)
   arg$type <- 'l'
   arg$lty <- lty[1]
 
-  do.call(lines, arg)
+  arg0 <- arg[names(arg) %in% c(names(formals(plot.default)), names(par()))]
+  do.call(lines, arg0)
 
   if (ncol(cntplotspecs)>1) {
     for (i in 2:ncol(cntplotspecs)){
       arg$y <- cntplotspecs[, i]
       arg$col <- lcol[i]
       arg$lty <- lty[i]
-      do.call(lines, arg)
+      arg0 <- arg[names(arg) %in% c(names(formals(plot.default)), names(par()))]
+      do.call(lines, arg0)
     }
   }
 
