@@ -50,7 +50,7 @@
 procspec <- function(rspecdata, opt = c('none', 'smooth', 'maximum', 'minimum', 
 										 'bin', 'sum', 'center'), 
 										 fixneg = c('none', 'addmin', 'zero'),
-										 span = .25, bins = 20) {
+										 span = .25, bins = 20, ...) {
 
 opt <- match.arg(opt, several.ok = TRUE)
 
@@ -113,22 +113,22 @@ if (any(opt=='smooth')){
            # evaluation = length(wl))$y})
 
 if (any(opt=='minimum')){
-  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] - min(rspecdata[, z]))
+  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] - min(rspecdata[, z], ...))
    applied <- c(applied, 'Scaling spectra to a minimum value of zero\n')
   }
 
 if (any(opt=='maximum')){
-  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] / max(rspecdata[, z]))
+  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] / max(rspecdata[, z], ...))
    applied <- c(applied, 'Scaling spectra to a maximum value of 1\n')
   }
 
 if (any(opt=='sum')){
-  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] / sum(rspecdata[, z]))
+  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] / sum(rspecdata[, z], ...))
    applied <- c(applied, 'Scaling spectra to a total area of 1\n')
   }
 
 if (any(opt=='center')){
-  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] - mean(rspecdata[, z]))
+  rspecdata <- sapply(1:ncol(rspecdata), function(z)rspecdata[, z] - mean(rspecdata[, z], ...))
    applied <- c(applied, 'Centering spectra to a mean of zero\n')
   }
 
